add corrections after feedback

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -15,10 +15,10 @@
 <body>
   <div class="qr-card">
     <img class="card-img" src="./images/image-qr-code.png" alt=" QR code linking to Frontend Mentor website"/>
-    <div class="card-bold">
-      <p>
-        Improve your Front-end skills by building projects
-      </p>
+    <div>
+      <h1 class="card-bold">
+        Improve your front-end skills by building projects
+      </h1>
     </div>
     <div class="card-blur">
       <p>
@@ -30,7 +30,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by: Elias Hizkiel Alota<a href="#">(@elijahizkiel)</a>.
+      Coded by: Elias Hizkiel Alota<a href="https://www.frontendmentor.io/profile/elijahizkiel" target="_blank">(@elijahizkiel)</a>.
     </div>
 </footer>
 </body>
